--- a/volunteer-page/style.css
+++ b/volunteer-page/style.css
@@ -25,6 +25,7 @@
 #bottom {
     position: absolute;
     top: 1010px;
+    height: 1185px;
     width: 100vw;
 }
 
